testdata/baselines/reference/submodule/conformance/discriminatedUnionTypes4.errors.txt
discriminatedUnionTypes4.ts(54,13): error TS2345: Argument of type 'Animal' is not assignable to parameter of type 'never'.
  Type '{ type: "cat"; meow: string; }' is not assignable to type 'never'.


==== discriminatedUnionTypes4.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/61207
    
    enum AnimalType {
      cat = "cat",
      dog = "dog",
    }
    
    type Animal =
      | {
          type: `${AnimalType.cat}`;
          meow: string;
        }
      | {
          type: `${AnimalType.dog}`;
          bark: string;
        };
    
    function check(p: never) {
      throw new Error("Error!");
    }
    
    function action1(animal: Animal) {
      if (animal.type === AnimalType.cat) {
        console.log(animal.meow);
      } else if (animal.type === AnimalType.dog) {
        console.log(animal.bark);
      } else {
        check(animal);
      }
    }
    
    function action2(animal: Animal) {
      switch (animal.type) {
        case `${AnimalType.cat}`:
          console.log(animal.meow);
          break;
        case `${AnimalType.dog}`:
          console.log(animal.bark);
          break;
        default:
          check(animal);
      }
    }
    
    function action3(animal: Animal) {
      switch (animal.type) {
        case AnimalType.cat:
          console.log(animal.meow);
          break;
        case AnimalType.dog:
          console.log(animal.bark);
          break;
        default:
          check(animal);
                ~~~~~~
!!! error TS2345: Argument of type 'Animal' is not assignable to parameter of type 'never'.
!!! error TS2345:   Type '{ type: "cat"; meow: string; }' is not assignable to type 'never'.
      }
    }
    